resolve dark mode issues

--- a/extension/styles/wiqlEditor.scss
+++ b/extension/styles/wiqlEditor.scss
@@ -59,5 +59,7 @@
     }
     .links {
       float: right;
+      padding: 8 0;
+      
     }
 }
